--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   mask_text_input_formatter: ^2.4.0
   dots_indicator: ^2.1.1
   flutter_launcher_icons: ^0.13.1
+  date_time_picker: ^2.0.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
