--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   mask_text_input_formatter: ^2.4.0
   dots_indicator: ^2.1.1
   flutter_launcher_icons: ^0.13.1
-  date_time_picker: ^2.0.0
+  flutter_localization: ^0.1.12
 
 
   # The following adds the Cupertino Icons font to your application.
